2015-01-26  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.16 ===

2015-01-26  Julien Moutte <julien@fluendo.com>

	* src/gstttmldownloader.c: (gst_ttml_downloader_done_cb),
	(gst_ttml_downloader_new), (gst_ttml_downloader_free),
	(gst_ttml_downloader_download):
	* src/gstttmldownloader.h: Use old deprecated mutex functions to support
	FC13 build.

2015-01-26  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.15 ===

2015-01-26  Julien Moutte <julien@fluendo.com>

	* configure.ac: Try to depend on a slighly older version of pixman for
	the build to support FC13.

2015-01-23  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.14 ===

2015-01-23  Xavi Artigas  <xartigas@fluendo.com>

	* gst-fluendo-ttml.spec.in:
	Add the fludownloader dependency to the .spec file.

2015-01-23  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	Do not abort configure if fludownloader is not found, so releases
	can still be made in the builder machine.

2015-01-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_reset):
	* src/gstttmlbase.h:
	* src/gstttmlrender.c: (gst_ttmlrender_reset),
	(gst_ttmlrender_dispose), (gst_ttmlrender_class_init):
	Clear images cache in ttmlrender when parsing is reset (due to
	document end or flush, for example). This is a first step to avoid
	having the cache grow forever.

2015-01-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_uri_get),
	(gst_ttmlbase_get_type):
	* src/gstttmlrender.c: (gst_ttmlrender_decode_image_from_buffer),
	(gst_ttmlrender_retrieve_image):
	Fix a couple of small string leaks, and one big downloaded-image-buffer
	leak.

2015-01-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmldownloader.c: (gst_ttml_downloader_download):
	Fix gcc warning.

2015-01-20  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	* src/Makefile.am: